fix: fix break page bug on mobile ` wifth < 575px`

--- a/styles/pages/_landing2.scss
+++ b/styles/pages/_landing2.scss
@@ -295,7 +295,7 @@
 
       @media (max-width: 575px) {
         top: 0 !important;
-        left: 50% !important;
+        // left: 50% !important;
         transform: unset !important;
       }
 
