--- a/styles/scss/layout/_hero-slider.scss
+++ b/styles/scss/layout/_hero-slider.scss
@@ -685,7 +685,9 @@
 
 .static-hero-s2 {
   background: #f9fbf7;
-  zoom: 75%;
+  @media (min-width: 1025px) {
+    zoom: 75%;
+  }
 
   .wpo-static-hero-inner {
     .slide-title-sub {
